* The inode list link was supposed to be secured by the journal log - so it was   definitely not a good idea to move _UnlockInodes() after the Journal::Unlock()   call (which was done to achieve a revertable inode). * Instead, Journal::Unlock() is now responsible for calling the now public   Transaction::UnlockInodes(), and always does this at the right time while   holding the journal log. * While I don't understand how #4155 can happen, this bug should be the one that   caused it.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31944 a95241bf-73f2-0310-859d-f6bbb57e9c96